--- a/ShoppingList.Web/Web.config
+++ b/ShoppingList.Web/Web.config
@@ -58,6 +58,22 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
     </handlers>
+    <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
+      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll"/>
+      <dynamicTypes>
+        <add mimeType="text/*" enabled="true"/>
+        <add mimeType="message/*" enabled="true"/>
+        <add mimeType="application/javascript" enabled="true"/>
+        <add mimeType="*/*" enabled="false"/>
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/*" enabled="true"/>
+        <add mimeType="message/*" enabled="true"/>
+        <add mimeType="application/javascript" enabled="true"/>
+        <add mimeType="*/*" enabled="false"/>
+      </staticTypes>
+    </httpCompression>
+    <urlCompression doStaticCompression="true" doDynamicCompression="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
