--- a/ShoppingList.Web/packages.config
+++ b/ShoppingList.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.2.1.13026" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.2.1.13026" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="Facebook" version="6.1.4" targetFramework="net45" />
   <package id="html5shiv" version="0.1.0.8" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="jQuery.Migrate" version="1.1.0" targetFramework="net45" />
@@ -18,6 +19,7 @@
   <package id="Knockout.Mapping" version="2.3.4" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
